--- a/build_scripts/assets/deb/control.j2
+++ b/build_scripts/assets/deb/control.j2
@@ -1,4 +1,4 @@
-Package: chia-blockchain-cli
+Package: cryptomines-blockchain-cli
 Version: {{ CHIA_INSTALLER_VERSION }}
 Architecture: {{ PLATFORM }}
 Maintainer: Chia Network Inc <hello@chia.net>
