--- a/build_scripts/assets/deb/control.j2
+++ b/build_scripts/assets/deb/control.j2
@@ -1,6 +1,7 @@
 Package: cryptomines-blockchain-cli
-Version: {{ CHIA_INSTALLER_VERSION }}
+Version: {{ CRYPTOMINES_INSTALLER_VERSION }}
 Architecture: {{ PLATFORM }}
-Maintainer: Chia Network Inc <hello@chia.net>
-Description: Chia Blockchain
- Chia is a modern cryptocurrency built from scratch, designed to be efficient, decentralized, and secure.
+Maintainer: Kopalnie Krypto <kontakt@kopalniekrypto.pl>
+Description: Cryptomines Blockchain
+ Cryptomines Blockchain
+ 
