--- a/build_scripts/assets/deb/control.j2
+++ b/build_scripts/assets/deb/control.j2
@@ -1,5 +1,5 @@
 Package: cryptomines-blockchain-cli
-Version: {{ CHIA_INSTALLER_VERSION }}
+Version: {{ CRYPTOMINES_INSTALLER_VERSION }}
 Architecture: {{ PLATFORM }}
 Maintainer: Kopalnie Krypto <kontakt@kopalniekrypto.pl>
 Description: Cryptomines Blockchain
